# levelzero-jni

./: .gitignore  CHANGELOG.md  INSTUCTIONS_NATIVE.md  LICENSE  README.md  c  compileAndRun.sh  constantsParameters.cl  constantsParameters.spv  copyData.cl  copyData.spv  copyLong.cl  copyLong.spv  copyParameters.spv  copyTest.cl  copyTest.spv  copy_data.cl  createSPIRVbinaries.sh  events.sh  lookUpBufferAddress.cl  lookUpBufferAddress.spv  pom.xml  run.sh
levelZeroLib/: CMakeLists.txt
levelZeroLib/src/: levelZeroBuffer.cpp  levelZeroCommandList.cpp  levelZeroCommandList.h  levelZeroContext.cpp  levelZeroDescriptors.cpp  levelZeroDevice.cpp  levelZeroDriver.cpp  levelZeroFence.cpp  levelZeroFence.h  levelZeroKernel.cpp  levelZeroKernel.h  levelZeroModule.cpp  levelZeroPointer.cpp  levelZeroPointer.h  levelZeroPowerMonitor.cpp  levelZeroPowerMonitor.h  levelZeroTimeStampKernel.cpp  ze_log.h  ze_misc_macros.h
scripts/: changeVersion.sh  chnageVersion.sh  compileAndRun.cmd  compileAndRun.sh  compileSPIRVKernelCopy.sh  copies.cmd  copies.sh  events.cmd  events.sh  fences.cmd  fences.sh  kernelTimers.cmd  kernelTimers.sh  largeBuffers.cmd  largeBuffers.sh  run.cmd  run.sh  testConstants.sh  testPowerMonitor.cmd  testPowerMonitor.sh  testZelloWorld.cmd  testZelloWorld.sh  transfersTimers.cmd  transfersTimers.sh
src/main/java/uk/ac/manchester/tornado/drivers/spirv/levelzero/: LevelZeroCommandList.java  LevelZeroCommandQueue.java  LevelZeroContext.java  LevelZeroDescriptor.java  LevelZeroDriver.java  LevelZeroFence.java  LevelZeroKernel.java  LevelZeroPowerMonitor.java  Pointer.java  PowerQueryStatus.java  ZeCommandListDescriptor.java  ZeCommandQueueDescriptor.java  ZeContextDescriptor.java  ZeDeviceMemAllocDescriptor.java  ZeDriverHandle.java  ZeEventDescriptor.java  ZeEventPoolDescriptor.java  ZeFenceDescriptor.java  ZeHostMemAllocDescriptor.java  ZeKernelDescriptor.java  ZeModuleDescriptor.java  ZeRelaxedAllocationLimitsExpDesc.java  ZeRelaxedAllocationLimitsExpDescriptor.java  ZeRelaxedAllocationLimitsFlags.java  ZesPowerEnergyCounter.java
src/main/java/uk/ac/manchester/tornado/drivers/spirv/levelzero/samples/: SimulationLKBuffer.java  TestConstantParameters.java  TestCopies.java  TestFences.java  TestKernelTimer.java  TestLargeBuffer.java  TestLevelZero.java  TestLevelZeroDedicatedMemory.java  TestLevelZeroDedicatedMemoryLong.java  TestLevelZeroPowerMonitor.java  TestLookUpBufferAddress.java  TestParameters.java  TestWithEvents.java  TestZelloWorld.java
src/main/java/uk/ac/manchester/tornado/drivers/spirv/levelzero/utils/: LevelZeroUtils.java
src/test/java/uk/ac/manchester/tornado/drivers/spirv/levelzero/: AppTest.java
